Dodati Java UnitTestovi za sve sistemske operacije na serverskoj strani